--- a/games/battleship.html
+++ b/games/battleship.html
@@ -3,31 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bataille Navale 2 Joueurs</title>
+  <title>Bataille Navale En Ligne</title>
+  <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      text-align: center;
       background: #f0f8ff;
       margin: 0;
       padding: 20px;
     }
-    h1 {
-      text-align: center;
-    }
-    .game-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
+    .hidden { display: none; }
     .board {
       display: grid;
       grid-template-columns: repeat(10, 30px);
       grid-template-rows: repeat(10, 30px);
       gap: 2px;
+      margin: 10px auto;
     }
     .cell {
       width: 30px;
@@ -42,67 +34,48 @@
     .ship { background-color: #444; }
     .hit { background-color: red; }
     .miss { background-color: white; }
-    .hidden { background-color: #add8e6; }
-    .controls {
-      margin-top: 20px;
-    }
-    .player-title {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-    button {
-      padding: 10px;
-      font-size: 16px;
-    }
+    #status { margin: 10px; font-weight: bold; }
+    input, button { padding: 10px; font-size: 16px; margin: 5px; }
   </style>
 </head>
 <body>
-  <h1>Bataille Navale - 2 Joueurs</h1>
-  <div class="game-container">
-    <div>
-      <div class="player-title">Joueur 1 (Tirer)</div>
-      <div class="board" id="player2Board"></div>
-    </div>
-    <div>
-      <div class="player-title">Joueur 2 (Tirer)</div>
-      <div class="board" id="player1Board"></div>
-    </div>
+  <h1>Bataille Navale - En Ligne</h1>
+  <div id="setup">
+    <p>Code de partie : <input id="roomCode" value="ABCD" maxlength="10"> </p>
+    <button onclick="createGame()">Créer</button>
+    <button onclick="joinGame()">Rejoindre</button>
   </div>
-  <div class="controls">
-    <button onclick="resetGame()">Réinitialiser</button>
+
+  <div id="game" class="hidden">
     <p id="status"></p>
+    <div id="enemyBoard" class="board"></div>
+    <div id="yourBoard" class="board"></div>
   </div>
 
   <script>
     const SIZE = 10;
     const ships = [5, 4, 3, 3, 2];
+    let yourBoard = [];
+    let enemyBoard = [];
+    let channel, isMyTurn = false, gameStarted = false;
+    let role = '', ably;
 
-    const player1Board = [];
-    const player2Board = [];
-    let currentPlayer = 1;
-    let gameEnded = false;
-
-    function initBoard(board) {
-      for (let i = 0; i < SIZE; i++) {
-        board[i] = [];
-        for (let j = 0; j < SIZE; j++) {
-          board[i][j] = { ship: false, hit: false };
-        }
-      }
+    function initBoards() {
+      yourBoard = Array.from({ length: SIZE }, () => Array(SIZE).fill({ ship: false, hit: false }));
+      enemyBoard = Array.from({ length: SIZE }, () => Array(SIZE).fill({ hit: false }));
     }
 
-    function placeShipsRandomly(board) {
-      for (let length of ships) {
+    function placeShips(board) {
+      for (let len of ships) {
         let placed = false;
         while (!placed) {
-          let orientation = Math.random() < 0.5 ? 'H' : 'V';
           let x = Math.floor(Math.random() * SIZE);
           let y = Math.floor(Math.random() * SIZE);
-          if (canPlaceShip(board, x, y, length, orientation)) {
-            for (let i = 0; i < length; i++) {
-              if (orientation === 'H') board[y][x + i].ship = true;
-              else board[y + i][x].ship = true;
+          let horiz = Math.random() < 0.5;
+          if (canPlace(board, x, y, len, horiz)) {
+            for (let i = 0; i < len; i++) {
+              if (horiz) board[y][x + i] = { ship: true, hit: false };
+              else board[y + i][x] = { ship: true, hit: false };
             }
             placed = true;
           }
@@ -110,83 +83,93 @@
       }
     }
 
-    function canPlaceShip(board, x, y, length, orientation) {
-      if (orientation === 'H' && x + length > SIZE) return false;
-      if (orientation === 'V' && y + length > SIZE) return false;
-      for (let i = 0; i < length; i++) {
-        let xi = orientation === 'H' ? x + i : x;
-        let yi = orientation === 'V' ? y + i : y;
-        if (board[yi][xi].ship) return false;
+    function canPlace(board, x, y, len, horiz) {
+      if (horiz && x + len > SIZE) return false;
+      if (!horiz && y + len > SIZE) return false;
+      for (let i = 0; i < len; i++) {
+        const cx = horiz ? x + i : x;
+        const cy = horiz ? y : y + i;
+        if (board[cy][cx]?.ship) return false;
       }
       return true;
     }
 
     function drawBoards() {
-      const board1 = document.getElementById("player1Board");
-      const board2 = document.getElementById("player2Board");
-      board1.innerHTML = '';
-      board2.innerHTML = '';
-      drawBoard(board1, player1Board, 2);
-      drawBoard(board2, player2Board, 1);
+      const enemyDiv = document.getElementById("enemyBoard");
+      const yourDiv = document.getElementById("yourBoard");
+      enemyDiv.innerHTML = '';
+      yourDiv.innerHTML = '';
+      enemyBoard.forEach((row, y) => row.forEach((cell, x) => {
+        const div = document.createElement('div');
+        div.className = 'cell';
+        if (cell.hit) div.classList.add(cell.ship ? 'hit' : 'miss');
+        else if (isMyTurn) div.onclick = () => fire(x, y);
+        enemyDiv.appendChild(div);
+      }));
+      yourBoard.forEach((row, y) => row.forEach((cell, x) => {
+        const div = document.createElement('div');
+        div.className = 'cell';
+        if (cell.ship) div.classList.add('ship');
+        if (cell.hit) div.classList.add(cell.ship ? 'hit' : 'miss');
+        yourDiv.appendChild(div);
+      }));
     }
 
-    function drawBoard(container, board, opponent) {
-      for (let y = 0; y < SIZE; y++) {
-        for (let x = 0; x < SIZE; x++) {
-          const cell = document.createElement('div');
-          cell.className = 'cell';
-          const cellData = board[y][x];
-
-          if (cellData.hit) {
-            cell.classList.add(cellData.ship ? 'hit' : 'miss');
-          } else if (opponent === currentPlayer) {
-            cell.classList.add('hidden');
-            cell.onclick = () => handleShot(board, x, y);
-          } else if (cellData.ship) {
-            cell.classList.add('ship');
-          }
-          container.appendChild(cell);
-        }
-      }
+    function fire(x, y) {
+      if (!isMyTurn || enemyBoard[y][x].hit) return;
+      isMyTurn = false;
+      enemyBoard[y][x].hit = true;
+      drawBoards();
+      channel.publish("fire", { x, y });
+      document.getElementById("status").innerText = "En attente de l'adversaire...";
     }
 
-    function handleShot(board, x, y) {
-      if (gameEnded) return;
-      const cell = board[y][x];
-      if (cell.hit) return;
-
+    function receiveFire(x, y) {
+      const cell = yourBoard[y][x];
       cell.hit = true;
+      const hit = cell.ship;
       drawBoards();
-      if (checkWin(board)) {
-        document.getElementById("status").innerText = `Le Joueur ${currentPlayer} a gagné !`;
-        gameEnded = true;
-        return;
-      }
-      currentPlayer = currentPlayer === 1 ? 2 : 1;
-      document.getElementById("status").innerText = `Tour du Joueur ${currentPlayer}`;
+      isMyTurn = true;
+      document.getElementById("status").innerText = hit ? "Touché !" : "À vous de jouer !";
+      channel.publish("result", { x, y, hit });
     }
 
-    function checkWin(board) {
-      for (let row of board) {
-        for (let cell of row) {
-          if (cell.ship && !cell.hit) return false;
-        }
-      }
-      return true;
-    }
-
-    function resetGame() {
-      gameEnded = false;
-      currentPlayer = 1;
-      initBoard(player1Board);
-      initBoard(player2Board);
-      placeShipsRandomly(player1Board);
-      placeShipsRandomly(player2Board);
+    function receiveResult(data) {
+      enemyBoard[data.y][data.x].ship = data.hit;
       drawBoards();
-      document.getElementById("status").innerText = `Tour du Joueur 1`;
     }
 
-    resetGame();
+    function setupGame() {
+      initBoards();
+      placeShips(yourBoard);
+      drawBoards();
+      document.getElementById("setup").classList.add("hidden");
+      document.getElementById("game").classList.remove("hidden");
+    }
+
+    function createGame() {
+      const code = document.getElementById("roomCode").value;
+      setupGame();
+      role = 'host';
+      isMyTurn = true;
+      ably = new Ably.Realtime('RQR2Pw.vnmFWw:xRG6DAJnEObLSQVysKoaeCcR9eCVnlRyXYzPks-kEWY');
+      channel = ably.channels.get(code);
+      channel.subscribe("fire", msg => receiveFire(msg.data.x, msg.data.y));
+      channel.subscribe("result", msg => receiveResult(msg.data));
+      document.getElementById("status").innerText = "À vous de jouer !";
+    }
+
+    function joinGame() {
+      const code = document.getElementById("roomCode").value;
+      setupGame();
+      role = 'guest';
+      isMyTurn = false;
+      ably = new Ably.Realtime('RQR2Pw.vnmFWw:xRG6DAJnEObLSQVysKoaeCcR9eCVnlRyXYzPks-kEWY');
+      channel = ably.channels.get(code);
+      channel.subscribe("fire", msg => receiveFire(msg.data.x, msg.data.y));
+      channel.subscribe("result", msg => receiveResult(msg.data));
+      document.getElementById("status").innerText = "En attente de l'adversaire...";
+    }
   </script>
 </body>
 </html>
